@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.1 2012/08/06 14:27:49 ryoon Exp $
+$NetBSD: distinfo,v 1.2 2012/10/01 11:16:22 ryoon Exp $
 
-SHA1 (SourceSansPro_FontsOnly-1.036.zip) = 744c8444714b0ac34fc3575cf04dc8040f4a1181
-RMD160 (SourceSansPro_FontsOnly-1.036.zip) = 291beaf314726821baa22b6328af26a9e4583732
-Size (SourceSansPro_FontsOnly-1.036.zip) = 1392120 bytes
+SHA1 (SourceSansPro_FontsOnly-1.038.zip) = 7c98900f5c83f5e5ab0fad88b1eb393ee51c971b
+RMD160 (SourceSansPro_FontsOnly-1.038.zip) = 59a556af9f201029ce3b0262169ce50ea91e4a54
+Size (SourceSansPro_FontsOnly-1.038.zip) = 1548271 bytes
